--- a/en/meta.yml
+++ b/en/meta.yml
@@ -6,7 +6,7 @@ description: In this resource you will find out how to make a fun and fast-paced
 original_url: https://raspberrypi.org/learning/lights-out
 theme: red
 duration: 2
-listed: false
+listed: true
 ingredient: false
 copyedit: true
 curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
