update project theme

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -4,7 +4,7 @@ hero_image: images/banner.png
 description: In this resource you will find out how to make a fun and fast-paced Explorer
   HAT reaction game
 original_url: https://raspberrypi.org/learning/lights-out
-theme: red
+theme: navy
 duration: 2
 listed: true
 ingredient: false
