--- a/en/meta.yml
+++ b/en/meta.yml
@@ -2,18 +2,22 @@
 title: Lights out!
 hero_image: images/banner.png
 description: In this resource you will find out how to make a fun and fast-paced Explorer
-  HAT reaction game
+HAT reaction game
 original_url: https://raspberrypi.org/learning/lights-out
 theme: red
 duration: 2
 listed: true
 ingredient: false
 copyedit: true
-curriculum: creator, design-0, programming-0, phys-comp-0, manufacture-0, community-0
-interests: ''
-technologies: rpi, physical computing, python
-site_areas: ''
-steps:
+curriculum: 2, design-0, programming-2, phys-comp-2, manufacture-0, community-0
+interests: games
+technologies: raspberry-pi, electronic-components, python
+site_areas: projects
+hardware: raspberry-pi, electronic-components
+software: python
+version: 3
+last_tested: 2017-01-01
+steps: 
 - title: Introduction
 - title: What you will need
 - title: Lights Out!
@@ -25,4 +29,3 @@ steps:
 - title: Adding a timer
 - title: But was it the right button?
 - title: What next?
-
