--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,8 +1,7 @@
 ---
 title: Lights out!
 hero_image: images/banner.png
-description: In this resource you will find out how to make a fun and fast-paced Explorer
-HAT reaction game
+description: In this resource you will find out how to make a fun and fast-paced Explorer HAT reaction game
 original_url: https://raspberrypi.org/learning/lights-out
 theme: navy
 duration: 2
