--- a/nl-NL/meta.yml
+++ b/nl-NL/meta.yml
@@ -22,9 +22,9 @@ steps:
   - title: Lichten uit!
   - title: 'Instellen '
   - title: 'Zet de lichten aan '
-  - title: De bibliotheek random (willekeurig) gebruiken
-  - title: Druk op de knop
-  - title: Veel lichten!
+  - title: De random (willekeurig) bibliotheek gebruiken
+  - title: Op de knop drukken
+  - title: Veel lampjes!
   - title: Een timer toevoegen
   - title: Maar was het de juiste knop?
   - title: Wat kun je verder nog doen?
