--- a/ar-SA/meta.yml
+++ b/ar-SA/meta.yml
@@ -27,4 +27,4 @@ steps:
   - title: الكثير من الأضواء!
   - title: إضافة مؤقِت
   - title: ولكن هل كان الزر الصحيح؟
-  - title: ما هي الخطوة التالية؟
+  - title: ما التالي؟
