Adding completion flags to meta yaml

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,7 +1,8 @@
 ---
 title: Lights out!
 hero_image: images/banner.png
-description: In this resource you will find out how to make a fun and fast-paced Explorer HAT reaction game
+description: In this resource you will find out how to make a fun and fast-paced Explorer
+  HAT reaction game
 original_url: https://raspberrypi.org/learning/lights-out
 theme: navy
 duration: 2
@@ -16,9 +17,10 @@ hardware: raspberry-pi, electronic-components
 software: python
 version: 3
 last_tested: 2017-01-01
-steps: 
+steps:
 - title: Introduction
 - title: What you will need
+  completion: engaged
 - title: Lights Out!
 - title: 'Setting up '
 - title: 'Turning lights on '
@@ -26,5 +28,6 @@ steps:
 - title: Pressing the button
 - title: Lots of lights!
 - title: Adding a timer
+  completion: internal
 - title: But was it the right button?
 - title: What next?
