--- a/mr-IN/meta.yml
+++ b/mr-IN/meta.yml
@@ -1,7 +1,8 @@
 ---
 title: दिवे बंद!
 hero_image: images/banner.png
-description: या संसाधनात आपल्याला मजेदार आणि वेगवान एक्सप्लोरर एचएटी (Explorer HAT) प्रतिक्रिया खेळ कसा बनवायचा ते आढळेल
+description: या संसाधनात आपल्याला मजेदार आणि वेगवान एक्सप्लोरर एचएटी (Explorer HAT)
+  प्रतिक्रिया खेळ कसा बनवायचा ते आढळेल
 original_url: https://raspberrypi.org/learning/lights-out
 theme: navy
 duration: 2
@@ -17,14 +18,16 @@ software: python
 version: 3
 last_tested: 2017-01-01
 steps:
-  - title: परिचय
-  - title: तुम्हाला कशाची आवश्यकता लागेल
-  - title: दिवे बंद!
-  - title: 'उभारणे '
-  - title: 'दिवे चालू करणे '
-  - title: अनियमित लायब्ररी वापरणे
-  - title: बटण दाबणे
-  - title: खूप सारे दिवे!
-  - title: टाइमर जोडणे
-  - title: पण ते बटन बरोबर होते का?
-  - title: पुढे काय?
+- title: परिचय
+- title: तुम्हाला कशाची आवश्यकता लागेल
+  completion: engaged
+- title: दिवे बंद!
+- title: 'उभारणे '
+- title: 'दिवे चालू करणे '
+- title: अनियमित लायब्ररी वापरणे
+- title: बटण दाबणे
+- title: खूप सारे दिवे!
+- title: टाइमर जोडणे
+  completion: internal
+- title: पण ते बटन बरोबर होते का?
+- title: पुढे काय?
