--- a/hi-IN/meta.yml
+++ b/hi-IN/meta.yml
@@ -1,7 +1,8 @@
 ---
 title: बत्तियां बुझाना!
 hero_image: images/banner.png
-description: इस संसाधन में आपको पता चलेगा कि कैसे एक मजेदार और तेज़-तर्रार एक्सप्लोरर एचएटी(Explorer HAT) प्रतिक्रिया गेम बनाया जाए
+description: इस संसाधन में आपको पता चलेगा कि कैसे एक मजेदार और तेज़-तर्रार एक्सप्लोरर
+  एचएटी(Explorer HAT) प्रतिक्रिया गेम बनाया जाए
 original_url: https://raspberrypi.org/learning/lights-out
 theme: navy
 duration: 2
@@ -17,14 +18,18 @@ software: python
 version: 3
 last_tested: 2017-01-01
 steps:
-  - title: भूमिका
-  - title: आपको किन चीजों की आवश्यकता होगी
-  - title: बत्तियां बुझाना!
-  - title: 'स्थापना करना'
-  - title: 'रोशनी चालू कर रहे है'
-  - title: अनियमित(random) लाइब्रेरी का उपयोग करना
-  - title: बटन दबाना
-  - title: बहुत सारी रोशनी!
-  - title: एक टाइमर(timer) जोड़ना
-  - title: लेकिन क्या यह सही बटन था?
-  - title: आगे क्या?
+- title: भूमिका
+- title: आपको किन चीजों की आवश्यकता होगी
+- title: बत्तियां बुझाना!
+- title: स्थापना करना
+  completion:
+  - engaged
+- title: रोशनी चालू कर रहे है
+- title: अनियमित(random) लाइब्रेरी का उपयोग करना
+- title: बटन दबाना
+- title: बहुत सारी रोशनी!
+- title: एक टाइमर(timer) जोड़ना
+- title: लेकिन क्या यह सही बटन था?
+  completion:
+  - internal
+- title: आगे क्या?
