--- a/en/meta.yml
+++ b/en/meta.yml
@@ -6,7 +6,7 @@ description: In this resource you will find out how to make a fun and fast-paced
 original_url: https://raspberrypi.org/learning/lights-out
 theme: navy
 duration: 2
-listed: true
+listed: false
 ingredient: false
 copyedit: true
 curriculum: 2, design-0, programming-2, phys-comp-2, manufacture-0, community-0
